# rusty_script

./: .gitignore  Cargo.toml  Makefile  README.md  attemptone  attemptone.rs  bench.py  breakrust  dump  for_loop.kai  memo_about_code_design  nan_check.kai  simple_fibonacci.kai  simple_fizzbuzz.kai  some_test.kai  some_thing.kai  test.hirtree  test.kai  test.py  test.rs  todo_list
src/: ast.rs  ir.rs  lib.rs  main.rs  semantic.rs  types.rs  vm.rs
src/bytecode/: expr.rs  mod.rs  stmt.rs
src/compiler/: Cargo.toml  builtin_functions.rs  bytecode.rs  context.rs  ir.rs  lib.rs  opcode.rs  typecheck.rs  vm.rs
src/compiler/bytecode/: a  expr.rs  expr.rs~  mod.rs  stmt.rs  stmt.rs~
src/compiler/llvm/: mod.rs
src/compiler/typecheck/: astconv.rs  check.rs  mod.rs
src/isekai/: Cargo.toml  _byte_test.rs  builtin_functions.rs  bytecode.rs  core.rs  evaluate.rs  gen_tree.py  generate.rs  mod.rs  nativefunc.rs  parse.rs  parser.rs  report.rs  scanner.rs  token.rs  tokenizer.rs  traits.rs  types.rs  vm.rs
src/isekai/src/: main.rs
src/isekai/syntax_ast/: lib.rs  parser.rs
src/llvm/: mod.rs
src/parser/: decl.rs  mod.rs  stmt.rs
src/report/: Cargo.toml
src/semantic/: Cargo.toml  lib.rs
src/syntax_ast/: Cargo.toml  ast.rs  ast_data.rs  lib.rs  parse.rs  parser.rs  token.rs  tokenizer.rs
src/syntax_ast/ast/: declaration.rs  mod.rs
src/syntax_ast/parser/: decl.rs  mod.rs  stmt.rs
src/syntax_ast/tokenizer/: mod.rs  token.rs
src/tokenizer/: mod.rs  token.rs
src/trace/: Cargo.toml  lib.rs  macros.rs  mod.rs  perf.rs  position.rs  report.rs  source.rs  test_file
src/types/: Cargo.toml  c_toml_bk  lib.rs  mod.rs  types.rs
