[package]
name = "compiler"
version = "0.1.0"
authors = ["fuzzy@notepc <5960126+Clutetot@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
name = "compiler"
path = "lib.rs"

[dependencies]
bitflags = "*"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }

types = { path = "../types" }
syntax_ast = { path = "../syntax_ast" }
trace = { path = "../trace" }
