[package]
name = "isekai"
version = "0.1.0"
authors = ["fuzzy@notepc <5960126+Clutetot@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "../compiler" }
syntax_ast = { path = "../syntax_ast" }
trace = { path = "../trace" }
semantic = { path = "../semantic" }
