
[package]
name = "semantic"
version = "0.1.0"
authors = ["fuzzy@notepc <5960126+Clutetot@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "semantic"
path = "lib.rs"

[dependencies]
bitflags = "*"
typed-arena = "*"

types = { path = "../types" }
syntax_ast = { path = "../syntax_ast" }
trace = { path = "../trace" }
