[package]
name = "syntax_ast"
version = "0.1.0"
authors = ["pantarou@home <pantarou@home.debian>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "syntax_ast"
path = "lib.rs"

[dependencies]
bitflags = "*"
types = { path = "../types" }
trace = { path = "../trace" }
