[package]
name = "trace"
version = "0.1.0"
authors = ["fuzzyperson@home <5960126+Clutetot@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "trace"
path = "lib.rs"

[dependencies]
lazy_static = "1.4.0"

[dependencies.log]
version = "0.4"
features = ["kv_unstable", "std"]

